--- a/semi/ML3.10/ML3.10.tex
+++ b/semi/ML3.10/ML3.10.tex
@@ -118,4 +118,6 @@ d_{MMD}(p, q) &= \left\|\frac{1}{n} \sum_{i=1}^n \phi(x_i) - \frac{1}{m} \sum_{i
 
 ここで、カーネル記法 $K(x, y) = \phi(x)^T \phi(y)$ を用いた。
 \end{dfn}
+\appendix
+\include{appendix_310}
 \end{document}
