--- a/semi/ML3.10/ml3.10.sty
+++ b/semi/ML3.10/ml3.10.sty
@@ -1,5 +1,6 @@
 \usepackage{amsmath,amsfonts,amssymb,amsthm,mathrsfs}
 \usepackage{mathtools}
+\usepackage{xcolor}
 \usepackage{otf}
 \usepackage{xspace}
 \usepackage{newpxtext}
@@ -17,11 +18,11 @@
 \fancyhf{} 
 \fancyhead[L]{\textsc{Chapter\ 3.10: Sample Esti. of \ Cost Function}}
 \fancyhead[R]{\textit{www.andreyis.com}}
-\fancyfoot[C]{\thepage\quad \textit{of}\quad\pageref{LastPage}}
+\fancyfoot[C]{\thepage\quad \textit{of}\quad\pageref*{LastPage}}
 \fancypagestyle{plain}{
   \fancyhf{}
   \renewcommand{\headrulewidth}{0pt}
-  \fancyfoot[C]{\thepage\quad \textit{of}\quad\pageref{LastPage}}
+  \fancyfoot[C]{\thepage\quad \textit{of}\quad\pageref*{LastPage}}
 
 }
 
