--- a/semi/ML3.10/ML3.10.tex
+++ b/semi/ML3.10/ML3.10.tex
@@ -2,17 +2,17 @@
 \usepackage{ml3.10}  
 \begin{document}
 \maketitle
-% \vspace{-0.4cm}
-% \begin{figure}[H] 
-%   \centering
-%   \begin{tikzpicture}[remember picture, overlay]
-%       \node[anchor=north east] at (current page.north east) {
-%           \includegraphics[width=2cm]{qr3.6.png} 
-%       };
-%       \node[anchor=north east, yshift=-2cm] at (current page.north east) {デジタル版はここ};
-%   \end{tikzpicture}
-%   \label{fig:my_label}
-% \end{figure}
+\vspace{-0.4cm}
+\begin{figure}[H] 
+  \centering
+  \begin{tikzpicture}[remember picture, overlay]
+      \node[anchor=north east] at (current page.north east) {
+          \includegraphics[width=2cm]{3.10.png} 
+      };
+      \node[anchor=north east, yshift=-2cm] at (current page.north east) {デジタル版はここ};
+  \end{tikzpicture}
+  \label{fig:my_label}
+\end{figure}
 \section{\textbf{Mean Squared Error}}
 \thispagestyle{plain}
 \begin{dfn}[\textbf{平均二乗誤差(mean squared error)}]\label{def:cross-entropy}
