--- a/semi/ML3.10/appendix_310.tex
+++ b/semi/ML3.10/appendix_310.tex
@@ -11,7 +11,7 @@ $ \displaystyle\int \phi_{\sigma}(x-x_k)\phi_{\sigma}(x-x_j)dx \displaystyle\ove
 \noindent
 \begin{proof}
 
-$W=x_j-x_k$,\ $X=x-x_k$,\ $Y=x_j-x$,\ $W$の密度関数を$f_{W}(w)$とすると、$W=((x-x_k)+(x_j-x))=X+Y$となる。したがって、
+確率変数(Random Variance)$W$の変数を$x_j-x_k$,\ 確率変数(R.V.)$X$の変数を$x-x_k$,\ 確率変数(R.V.)$Y$の変数を$x_j-x$,\ $W$の密度関数を$f_{W}(w)$とすると、$W=((x-x_k)+(x_j-x))=X+Y$となる。したがって、
 $$
 F_{W}(w)=P(W\leq w)=\displaystyle\int_{-\infty}^{w}f_{W}(w)dw\ \implies\ f_{W}(w)=\frac{d}{dw}F_{W}(w)
 $$ 
