ml3.11_ver1.0作成完了

--- a/semi/ML3.10/ML3.10.tex
+++ b/semi/ML3.10/ML3.10.tex
@@ -109,7 +109,7 @@ $$\mathbb{E}_{X \sim p}[\phi(X)] \approx \frac{1}{n} \sum_{i=1}^n \phi(x_i),$$
 $$\mathbb{E}_{Y \sim q}[\phi(Y)] \approx \frac{1}{m} \sum_{i=1}^m \phi(y_i),$$
 
 次に、大数の法則によって、
- $$ \frac{1}{n} \sum_{i=1}^{n} \phi(x_i) \xrightarrow{n \to \infty} \mathbb{E}_{X \sim p}[\phi(X)],\ \frac{1}{m} \sum_{i=1}^{m} \phi(y_i) \xrightarrow{m \to \infty} \mathbb{E}_{Y \sim q}[\phi(Y)] $$
+ $$ \frac{1}{n} \sum_{i=1}^{n} \phi(x_i) \xrightarrow[\text{a.s.}]{n \to \infty} \mathbb{E}_{X \sim p}[\phi(X)],\ \frac{1}{m} \sum_{i=1}^{m} \phi(y_i) \xrightarrow[\text{a.s.}]{m \to \infty} \mathbb{E}_{Y \sim q}[\phi(Y)] $$
 
 そして $p$ と $q$ の間の最大平均乖離は、前の2つのサンプルを用いて次のように推定できる：
 
