--- a/semi/ML3.11/ml3.11.tex
+++ b/semi/ML3.11/ml3.11.tex
@@ -13,7 +13,7 @@
   \end{tikzpicture}
   \label{fig:my_label}
 \end{figure}
-\section{\textbf{Regularization}}
+\section*{\textbf{Regularization}}
 \thispagestyle{plain}
 過学習を避けるために，コスト関数には追加の項を含めることがあります。
 パラメータが任意に大きな値を取ることを許すと，モデルは訓練データに過度に適合することがあると指摘されています。
