--- a/semi/ML3.10/ML3.10.tex
+++ b/semi/ML3.10/ML3.10.tex
@@ -9,7 +9,7 @@
       \node[anchor=north east] at (current page.north east) {
           \includegraphics[width=2cm]{3.10.png} 
       };
-      \node[anchor=north east, yshift=-2cm] at (current page.north east) {デジタル版はここ};
+      \node[anchor=north east, yshift=-2cm] at (current page.north east) {PDF版はここ$\uparrow$};
   \end{tikzpicture}
   \label{fig:my_label}
 \end{figure}
