--- a/semi/ML3.11/ml3.11.sty
+++ b/semi/ML3.11/ml3.11.sty
@@ -16,7 +16,7 @@
 \usepackage{lastpage}
 \pagestyle{fancy}
 \fancyhf{} 
-\fancyhead[L]{\textsc{Chapter\ 3.10: Sample Esti. of \ Cost Function}}
+\fancyhead[L]{\textsc{Chapter\ 3.11: Cost Function and Regularization}}
 \fancyhead[R]{\textit{www.andreyis.com}}
 \fancyfoot[C]{\thepage\quad \textit{of}\quad\pageref*{LastPage}}
 \fancypagestyle{plain}{
