create ml4.2 file

--- a/semi/ML3.11/ml3.11.tex
+++ b/semi/ML3.11/ml3.11.tex
@@ -40,7 +40,7 @@ L_{1}(w)=C(w)+\lambda \lVert w\rVert_{1},
 これは，上記の 2 つの正則化手続きを一般化したものです。関数 \(U:\mathbb{R}^{n}\to\mathbb{R}_{+}\) が次を満たすとします。
 \begin{enumerate}\setlength\itemsep{0pt}
   \item \(U(x)=0\) となるのは \(x=0\) のとき，かつそのときに限る。
-  \item \(U\) は \(x=0\) で大域的最小値を持つ。
+  \item \(U\) は \(x=0\) で大域的最小値を持つ。\ie $U(0)\leq U(x)\ (\forall x\in \mathbb{R}^n)$
 \end{enumerate}
 \(U\) が滑らかに微分可能な場合，条件 (ii) は導関数の条件 \(U'(0)=0\) および \(U''(0)>0\) によって含意されます。ポテンシャル関数 \(U\) は，前述の \(L^{1}\) と \(L^{2}\) ノルムの一般化です。
 
