delete numbers in  ml4.2 file

--- a/semi/ML4.2/ml4.2.sty
+++ b/semi/ML4.2/ml4.2.sty
@@ -121,5 +121,5 @@ colbacktitle=black,theorem style=standard,breakable,arc=10pt}
 }
 
 \title{\vspace{-4.5cm}\S\ 4.2.3\quad Method of Steepest Descent}
-\author{伊 冉(Andre YI)\ -\ 21122200512}
+\author{伊 冉(Andre YI)}
 \date{\today}
