add ML4.4 series

--- a/semi/ML4.3/ML4.3.tex
+++ b/semi/ML4.3/ML4.3.tex
@@ -144,7 +144,7 @@ $H$の勾配は以下のようになる
 
 ここで、$v^n$とはn回目の反復のインデックスである。上の結果を解析すると
 \begin{enumerate}
-    \item $v^n$ の更新式は $v^{n+1} = (1-\delta)v^n\implies v^n = (1-\delta)^n v^0$ となり、$\delta$ が小さければ$v^n \to v^* = 0$ ($n\to \infty$)\ \ie 速度は消える。
+    \item $v^n , x^n$の更新式は $v^{n+1} = (1-\delta)v^n\implies v^n = (1-\delta)^n v^0$ となり、$\delta$ が小さければ$v^n \to v^* = 0$ ($n\to \infty$)\ \ie 速度は消える。
     \item $x$ の更新式は $x^{n+1} = x^n - \delta \nabla f(x^n)$ となり、これは通常の最急降下法と全く同じである。
 \end{enumerate}
 \vspace{1em}
