update ml4.4 file

--- a/semi/ML4.4/ml4.4_momentum_method.tex
+++ b/semi/ML4.4/ml4.4_momentum_method.tex
@@ -329,6 +329,7 @@ x^{n+1} = x^n + \epsilon \left( \frac{\tilde{v}^n}{\epsilon} \right) = x^n + \ti
 \[ \lim_{n \to \infty} M^n = \mathbf{O_{2 \times 2}} \quad (\text{ゼロ行列}) \]
 が証明された。
 
+\noindent
 極限 $n \to \infty$ を式 \eqref{eq:closed_form} に適用する。
 第一項 $M^n s_0$ は 0 に収束し、第二項の $M^n$ も 0 になります。
 \begin{align*}
